Add to configuration ClientName, Password VoIP service
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24213

--- a/CLITester/VoIPSwitchService1/App.config
+++ b/CLITester/VoIPSwitchService1/App.config
@@ -10,6 +10,8 @@
   </startup>
   <appSettings>
     <add key="ExpiryTime" value="60" />
+    <add key="ClientName" value="sama" />
+    <add key="Password" value="sama" />
     <add key="LineAvailable" value="20" />
     <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
     <add key="SmtpServer" value="smtp.gmail.com" />
