--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Vanrise.Queueing.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Vanrise.Queueing.Web.csproj
@@ -60,6 +60,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="Vanrise.Web.Base">
+      <HintPath>..\..\..\Vanrise\Code\Vanrise.Web.Base\bin\Vanrise.Web.Base.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -76,12 +79,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\QueueingController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
-    <Folder Include="Queueing\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Queueing\Services\QueueingAPIService.js" />
+    <Content Include="Queueing\Views\QueueItemManagement.html" />
+    <Content Include="Queueing\Views\QueueItemManagementController.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
