Variation Report Data
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24251

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
@@ -134,6 +134,8 @@
     <Content Include="Analytics\Services\APIServices\CDRAPIService.js" />
     <Content Include="Analytics\Views\Billing Reports\BillingReports.html" />
     <Content Include="Analytics\Views\Billing Reports\BillingReportsController.js" />
+    <Content Include="Analytics\Views\Billing Statistics\VariationReportsCustomersSuppliers.html" />
+    <Content Include="Analytics\Views\Billing Statistics\VariationReportsCustomersSuppliersController.js" />
     <Content Include="Analytics\Views\Billing Statistics\VariationReportsDestinationsController.js" />
     <Content Include="Analytics\Views\Billing Statistics\VariationReportsDestinations.html" />
     <Content Include="Analytics\Views\Billing Statistics\VariationReports.html" />
