--- a/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
@@ -51,7 +51,7 @@
     <Compile Include="RoleDataManager.cs" />
     <Compile Include="UserDataManager.cs" />
     <Compile Include="ViewDataManager.cs" />
-    <Compile Include="WidgetsDataManager.cs" />
+    <Compile Include="WidgetDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
