--- a/BusinessProcess/Code/Vanrise.Queueing/Vanrise.Queueing.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing/Vanrise.Queueing.csproj
@@ -60,8 +60,13 @@
     <Compile Include="PersistentQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueActivationService.cs" />
+    <Compile Include="QueueingManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Queueing.Data.SQL\Vanrise.Queueing.Data.SQL.csproj">
+      <Project>{8C98C28A-3F14-4876-B7DD-DC95313A3BA4}</Project>
+      <Name>Vanrise.Queueing.Data.SQL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Queueing.Data\Vanrise.Queueing.Data.csproj">
       <Project>{7a7be8a2-3c37-42d6-a2e0-b2422661427f}</Project>
       <Name>Vanrise.Queueing.Data</Name>
