--- a/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
+++ b/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
@@ -161,6 +161,10 @@
     <Reference Include="Vanrise.Logging.SQL">
       <HintPath>..\..\Vanrise\Code\Output\Vanrise.Logging.SQL.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Runtime.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Runtime.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Security.Business">
       <HintPath>..\..\Vanrise\Code\Output\Vanrise.Security.Business.dll</HintPath>
     </Reference>
