--- a/TOneV2/Code/TOneV2/TOne.RuntimeService/App.config
+++ b/TOneV2/Code/TOneV2/TOne.RuntimeService/App.config
@@ -20,17 +20,19 @@
   </vanriseLogging>
   <connectionStrings>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.190;Database=MVTSProDemo;User ID=sa;Password=QC@cce$$"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
+    <add name="MainDBConnString" connectionString="Server=192.168.110.190;User ID=qa;Password=qa123;Database=mvtsprodemo;"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
-    <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
+    <!--<add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>-->
     <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
-    <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
-    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneRouting_{0};Data Source=."/>-->
-    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_Routing_{0};User ID=Development;Password=dev!123"/>
-    <!--<add name="WFPersistence" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFPersistence;Data Source=."/>-->
+    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.190;Initial Catalog=TOneTransactionDB;User ID=qa;Password=qa123"/>
+    <add name="LogDBConnString" connectionString="Data Source=192.168.110.190;Initial Catalog=TOneWFTracking;User ID=qa;Password=qa123"/>
+    <!--<add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>-->
+    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneDevTest01_routing_{0};Data Source=."/>-->
+    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_routing_{0};user id=development;password=dev!123"/>-->
+    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.190;Initial Catalog=MVTSProDemo_{0};user id=qa;password=qa123"/>
   </connectionStrings>
 
   <!-- BEGIN CUSTOMER VARYING SECTION -->
@@ -42,6 +44,9 @@
     <add key="AddBusinessProcessConsoleTracking" value="true"/>
     <add key="DropOldRoutingDatabasesInterval" value="00:01:00"/>
     <add key="BusinessProcessServiceHost" value="localhost:1849"/>
+    <add key="BCPDonotDeleteFiles" value="true"/>
+    <add key="BCPTempFilesDirectory" value="D:\BCPFiles" />
+    <add key="BCPCommandName" value="bcp" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
