--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -36,12 +36,14 @@
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.190;Database=MVTSProDemo;User ID=sa;Password=QC@cce$$"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
+    <add name="MainDBConnString" connectionString="Server=192.168.110.190;User ID=qa;Password=qa123;Database=mvtsprodemo;"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
-    <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
+    <!--<add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>-->
     <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
-    <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
+    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.190;Initial Catalog=TOneTransactionDB;User ID=qa;Password=qa123"/>
+    <add name="LogDBConnString" connectionString="Data Source=192.168.110.190;Initial Catalog=TOneWFTracking;User ID=qa;Password=qa123"/>
+    <!--<add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>-->
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneDevTest01_routing_{0};Data Source=."/>-->
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_routing_{0};user id=development;password=dev!123"/>-->
     <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.190;Initial Catalog=MVTSProDemo_{0};user id=qa;password=qa123"/>
@@ -54,7 +56,7 @@
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
       <!--<property name="connection.connection_string">Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$</property>-->
-      <property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123</property>
+      <property name="connection.connection_string">Server=192.168.110.190;Database=MVTSProDemo;User ID=qa;Password=qa123</property>
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TONE-ProtelMarch2012;User ID=sa;Password=vanrise@cce$$</property>-->
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=sa;Password=vanrise@cce$$</property>-->
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
@@ -169,7 +171,7 @@
   <appSettings>
     <add key="TABS License" value="BF-2F-B4-CD-36-CB-1D-4B-8F-55-1C-F4-99-CD-1B-E8::==QMwkDM5EDMyYjM4ADNxAjM:kVGdwlncj5WR09mT"/>
     <add key="LoggerPath" value="/TOne_RePricingService/Logger"/>
-    <add key="hibernate.connection.connection_string" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
+    <add key="hibernate.connection.connection_string" value="Server=192.168.110.190;Database=mvtsprodemo;User ID=Development;Password=qa123"/>
     <!--<add key="hibernate.connection.connection_string" value="Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$"></add>-->
     <!--<add key="SecondaryConnetionString" value="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
     <!--<add key="RepricingFrom" value="2014-07-07"/>
@@ -182,13 +184,13 @@
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
     <add key="AddBusinessProcessConsoleTracking" value="true"/>
     <add key="DropOldRoutingDatabasesInterval" value="00:01:00"/>
-    <add key="BusinessProcessServiceHost" value="localhost:1833"/>
+    <add key="BusinessProcessServiceHost" value="localhost:1849"/>
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
     <add key="RepricingParallelThreads" value="1"/>
     <add key="RoutingCodePrefixLength" value="2"/>
-    <add key="BCPDonotDeleteFiles" value="false"/>
+    <add key="BCPDonotDeleteFiles" value="true"/>
     <add key="RebuildZoneRates" value="false"/>
-    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
+    <add key="BCPTempFilesDirectory" value="D:\BCPFiles" />
   </appSettings>
   <system.codedom>
     <compilers>
