--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -61,6 +61,7 @@
     <Compile Include="User.cs" />
     <Compile Include="View.cs" />
     <Compile Include="Content.cs" />
+    <Compile Include="ViewContent.cs" />
     <Compile Include="Widget.cs" />
     <Compile Include="WidgetDefinition.cs" />
     <Compile Include="WidgetDefinitionSetting.cs" />
