implementing summary in genericEntityDataManager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24302

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/TOne.BI.Web.csproj
@@ -130,6 +130,8 @@
     <Content Include="BI\Directives\Templates\vr-chart-bi-directive-template.js" />
     <Content Include="BI\Directives\Templates\vr-datagrid-bi-directive-template.html" />
     <Content Include="BI\Directives\Templates\vr-datagrid-bi-directive-template.js" />
+    <Content Include="BI\Directives\Templates\vr-summary-bi-directive-template.html" />
+    <Content Include="BI\Directives\Templates\vr-summary-bi-directive-template.js" />
     <Content Include="BI\Directives\vr-bi-chart-directive.js" />
     <Content Include="BI\Directives\vr-bi-datagrid-directive.js" />
     <Content Include="BI\Directives\bi-visualelement-service.js" />
