--- a/TOneV2/Code/TOneV2/TOne.BI.Entities/TOne.BI.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Entities/TOne.BI.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="GenericEntityRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SummaryDirectiveObject.cs" />
     <Compile Include="TimeValuesRecord.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
