--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -506,11 +506,22 @@
     <Content Include="Client\Styles\angular-notify.css" />
     <Content Include="Client\Styles\angular-ui-switch.css" />
     <Content Include="Client\Styles\custom.css" />
+    <Content Include="Client\Styles\fonts\BoldItalic\OpenSans-BoldItalic.svg" />
+    <Content Include="Client\Styles\fonts\Bold\OpenSans-Bold.svg" />
+    <Content Include="Client\Styles\fonts\ExtraBoldItalic\OpenSans-ExtraBoldItalic.svg" />
+    <Content Include="Client\Styles\fonts\ExtraBold\OpenSans-ExtraBold.svg" />
+    <Content Include="Client\Styles\fonts\Italic\OpenSans-Italic.svg" />
+    <Content Include="Client\Styles\fonts\LightItalic\OpenSans-LightItalic.svg" />
+    <Content Include="Client\Styles\fonts\Light\OpenSans-Light.svg" />
+    <Content Include="Client\Styles\fonts\Regular\OpenSans-Regular.svg" />
+    <Content Include="Client\Styles\fonts\SemiboldItalic\OpenSans-SemiboldItalic.svg" />
+    <Content Include="Client\Styles\fonts\Semibold\OpenSans-Semibold.svg" />
     <Content Include="Client\Styles\ivh-treeview.css" />
     <Content Include="Client\Styles\jquery-ui.css" />
     <Content Include="Client\Styles\loader.css" />
     <Content Include="Client\Styles\loader.gif" />
     <Content Include="Client\Styles\ng-sortable.style.css" />
+    <Content Include="Client\Styles\open-sans.css" />
     <Content Include="Client\Styles\simple-sidebar.css" />
     <Content Include="Client\Styles\Styles.css" />
     <Content Include="Client\Styles\TOnv2theme.css" />
@@ -580,7 +591,48 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Client\Styles\fonts\BoldItalic\OpenSans-BoldItalic.eot" />
+    <Content Include="Client\Styles\fonts\BoldItalic\OpenSans-BoldItalic.ttf" />
+    <Content Include="Client\Styles\fonts\BoldItalic\OpenSans-BoldItalic.woff" />
+    <Content Include="Client\Styles\fonts\BoldItalic\OpenSans-BoldItalic.woff2" />
+    <Content Include="Client\Styles\fonts\Bold\OpenSans-Bold.eot" />
+    <Content Include="Client\Styles\fonts\Bold\OpenSans-Bold.ttf" />
+    <Content Include="Client\Styles\fonts\Bold\OpenSans-Bold.woff" />
+    <Content Include="Client\Styles\fonts\Bold\OpenSans-Bold.woff2" />
+    <Content Include="Client\Styles\fonts\ExtraBoldItalic\OpenSans-ExtraBoldItalic.eot" />
+    <Content Include="Client\Styles\fonts\ExtraBoldItalic\OpenSans-ExtraBoldItalic.ttf" />
+    <Content Include="Client\Styles\fonts\ExtraBoldItalic\OpenSans-ExtraBoldItalic.woff" />
+    <Content Include="Client\Styles\fonts\ExtraBoldItalic\OpenSans-ExtraBoldItalic.woff2" />
+    <Content Include="Client\Styles\fonts\ExtraBold\OpenSans-ExtraBold.eot" />
+    <Content Include="Client\Styles\fonts\ExtraBold\OpenSans-ExtraBold.ttf" />
+    <Content Include="Client\Styles\fonts\ExtraBold\OpenSans-ExtraBold.woff" />
+    <Content Include="Client\Styles\fonts\ExtraBold\OpenSans-ExtraBold.woff2" />
+    <Content Include="Client\Styles\fonts\Italic\OpenSans-Italic.eot" />
+    <Content Include="Client\Styles\fonts\Italic\OpenSans-Italic.ttf" />
+    <Content Include="Client\Styles\fonts\Italic\OpenSans-Italic.woff" />
+    <Content Include="Client\Styles\fonts\Italic\OpenSans-Italic.woff2" />
+    <Content Include="Client\Styles\fonts\LightItalic\OpenSans-LightItalic.eot" />
+    <Content Include="Client\Styles\fonts\LightItalic\OpenSans-LightItalic.ttf" />
+    <Content Include="Client\Styles\fonts\LightItalic\OpenSans-LightItalic.woff" />
+    <Content Include="Client\Styles\fonts\LightItalic\OpenSans-LightItalic.woff2" />
+    <Content Include="Client\Styles\fonts\Light\OpenSans-Light.eot" />
+    <Content Include="Client\Styles\fonts\Light\OpenSans-Light.ttf" />
+    <Content Include="Client\Styles\fonts\Light\OpenSans-Light.woff" />
+    <Content Include="Client\Styles\fonts\Light\OpenSans-Light.woff2" />
+    <Content Include="Client\Styles\fonts\Regular\OpenSans-Regular.eot" />
+    <Content Include="Client\Styles\fonts\Regular\OpenSans-Regular.ttf" />
+    <Content Include="Client\Styles\fonts\Regular\OpenSans-Regular.woff" />
+    <Content Include="Client\Styles\fonts\Regular\OpenSans-Regular.woff2" />
+    <Content Include="Client\Styles\fonts\SemiboldItalic\OpenSans-SemiboldItalic.eot" />
+    <Content Include="Client\Styles\fonts\SemiboldItalic\OpenSans-SemiboldItalic.ttf" />
+    <Content Include="Client\Styles\fonts\SemiboldItalic\OpenSans-SemiboldItalic.woff" />
+    <Content Include="Client\Styles\fonts\SemiboldItalic\OpenSans-SemiboldItalic.woff2" />
+    <Content Include="Client\Styles\fonts\Semibold\OpenSans-Semibold.eot" />
+    <Content Include="Client\Styles\fonts\Semibold\OpenSans-Semibold.ttf" />
+    <Content Include="Client\Styles\fonts\Semibold\OpenSans-Semibold.woff" />
+    <Content Include="Client\Styles\fonts\Semibold\OpenSans-Semibold.woff2" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
       <SubType>Designer</SubType>
