--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -20,6 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="BICubeName" value="BISLT One Day" />
     <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
+    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
     <add key="SecurityDBConnStringKey" value="MainDBConnString"/>
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
