--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Vanrise.Queueing.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Vanrise.Queueing.Web.csproj
@@ -83,11 +83,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\QueueingController.cs" />
+    <Compile Include="ModelMappers\QueueingMappers.cs" />
+    <Compile Include="Models\QueueInstanceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Queueing\Services\QueueingAPIService.js" />
     <Content Include="Queueing\Views\QueueItemManagement.html" />
