--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -12,6 +12,7 @@
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=NetTalkForDev;User ID=Development;Password=dev!123" />-->
     <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = BISLTOneDay_3Years; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />
     <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneDevTest01_routing_{0};user id=development;password=dev!123"/>
+    <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=TOneQueueDB;User ID=sa; Password=p@ssw0rd" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,6 +22,7 @@
     <add key="BICubeName" value="BISLT One Day" />
     <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
     <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="QueueItemDBConnStringKey" value="QueueItemDBConnString"/>
     <add key="SecurityDBConnStringKey" value="MainDBConnString"/>
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
