--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
@@ -149,7 +149,11 @@
   <ItemGroup>
     <Content Include="FraudAnalysis\Services\APIServices\SuspicionAnalysisAPIService.js" />
     <Content Include="FraudAnalysis\Services\APIServices\StrategyAPIService.js" />
+    <Content Include="FraudAnalysis\Views\ExecuteStrategyProcessInput_Scheduled.html" />
+    <Content Include="FraudAnalysis\Views\SaveCDRToDBProcessInput_Scheduled.html" />
     <Content Include="FraudAnalysis\Views\CDRImportProcessInput_Scheduled.html" />
+    <Content Include="FraudAnalysis\Views\ExecuteStrategyProcessInput_ScheduledController.js" />
+    <Content Include="FraudAnalysis\Views\SaveCDRToDBProcessInput_ScheduledController.js" />
     <Content Include="FraudAnalysis\Views\CDRImportProcessInput_ScheduledController.js" />
     <Content Include="FraudAnalysis\Views\SaveCDRToDBProcessInput.html" />
     <Content Include="FraudAnalysis\Views\CDRImportProcessInput.html" />
