--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.BP/Vanrise.Fzero.CDRImport.BP.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.BP/Vanrise.Fzero.CDRImport.BP.csproj
@@ -55,8 +55,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Queueing">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Queueing.dll</HintPath>
+    <Reference Include="Vanrise.Queueing, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\BusinessProcess\Code\Output\Vanrise.Queueing.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
