--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Arguments/Vanrise.Fzero.FraudAnalysis.BP.Arguments.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Arguments/Vanrise.Fzero.FraudAnalysis.BP.Arguments.csproj
@@ -49,6 +49,12 @@
     <Compile Include="ExecuteStrategyProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Entities\Vanrise.Fzero.FraudAnalysis.Entities.csproj">
+      <Project>{516b5fb8-205f-44c7-9ce9-949ad88ec87b}</Project>
+      <Name>Vanrise.Fzero.FraudAnalysis.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
