--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
@@ -53,11 +53,13 @@
     <Reference Include="Vanrise.Common">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Queueing">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Queueing.dll</HintPath>
+    <Reference Include="Vanrise.Queueing, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\BusinessProcess\Code\Output\Vanrise.Queueing.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Queueing.Entities">
-      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Queueing.Entities.dll</HintPath>
+    <Reference Include="Vanrise.Queueing.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\BusinessProcess\Code\Output\Vanrise.Queueing.Entities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Runtime, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
