--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/TOne.Analytics.Web.csproj
@@ -125,6 +125,7 @@
     <Content Include="Analytics\Constants\BillingCDRMeasureEnum.js" />
     <Content Include="Analytics\Constants\BillingCDROptionMeasureEnum.js" />
     <Content Include="Analytics\Constants\EntityTypeEnum.js" />
+    <Content Include="Analytics\Constants\GroupingByEnum.js" />
     <Content Include="Analytics\Constants\TimePeriodEnum.js" />
     <Content Include="Analytics\Constants\TrafficStatisticGroupKeysEnum.js" />
     <Content Include="Analytics\Constants\TrafficStatisticsMeasureEnum.js" />
