--- a/Vanrise/Code/Vanrise.Runtime.Business/Vanrise.Runtime.Business.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Business/Vanrise.Runtime.Business.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchedulerTaskManager.cs" />
+    <Compile Include="TimeSchedulerTaskTrigger.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
