Scheduler Service - Added a reference to Vanrise Runtime Business Project that contains the Timer trigger implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24398

--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -271,6 +271,9 @@
     <Reference Include="Vanrise.Runtime">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Runtime.Business">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Runtime.Business.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Runtime.Data">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Runtime.Data.dll</HintPath>
     </Reference>
