--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessEntityManager.cs" />
+    <Compile Include="SecurityContext.cs" />
     <Compile Include="ViewManager.cs" />
     <Compile Include="MenuManager.cs" />
     <Compile Include="PermissionManager.cs" />
