--- a/CLITester/CallGeneratorLibrary/CallGeneratorLibrary.csproj
+++ b/CLITester/CallGeneratorLibrary/CallGeneratorLibrary.csproj
@@ -87,7 +87,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Repositories\AuditRepository.cs" />
+    <Compile Include="Repositories\BalanceDetailRepository.cs" />
     <Compile Include="Repositories\CarrierRepository.cs" />
+    <Compile Include="Repositories\ContractRepository.cs" />
     <Compile Include="Repositories\ExceptionRepository.cs" />
     <Compile Include="Repositories\GeneratedCallRepository.cs" />
     <Compile Include="Repositories\MontyCallRepository.cs" />
@@ -100,6 +102,7 @@
     <Compile Include="Repositories\UserBalanceRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Utilities\ActionClass.cs" />
+    <Compile Include="Utilities\BalanceDetails.cs" />
     <Compile Include="Utilities\Config.cs" />
     <Compile Include="Utilities\Context.cs" />
     <Compile Include="Utilities\ConvertXML.cs" />
