--- a/CLITester/CallGeneratorLibrary/app.config
+++ b/CLITester/CallGeneratorLibrary/app.config
@@ -19,13 +19,12 @@
     </compilation>
   </system.web>
   <appSettings>
-    <add key="SipAccId" value="1" />
     <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
     <add key="SmtpServer" value="smtp.gmail.com" />
   </appSettings>
     <connectionStrings>
         <add name="CallGeneratorLibrary.Properties.Settings.FraudTest2ConnectionString"
-            connectionString="Data Source=.;Initial Catalog=CLITester;User ID=sa;Password=vanrise@cce$$;"
+            connectionString="Data Source=.;Initial Catalog=CLITester;User ID=sa;Password=P@ssw0rd!;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
