Refrencing the Integration Module
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24413

--- a/CDRAnalysis/CDRAnalysis.Web/Web.config
+++ b/CDRAnalysis/CDRAnalysis.Web/Web.config
@@ -12,6 +12,7 @@
 
     <add name="TransactionDBConnString"    connectionString="Initial Catalog=FZeroTransaction;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
     <add name="LogDBConnString"            connectionString="Initial Catalog=FZeroLog;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
+    <add name="IntegrationDBConnString"            connectionString="Initial Catalog=VanriseIntegration;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
   
   </connectionStrings>
   <appSettings>
@@ -25,6 +26,7 @@
     <add key="QueueItemDBConnStringKey" value="QueueDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
     <add key="SecurityDBConnStringKey" value="CDRDBConnectionString"/>
+    <add key="IntegrationConnStringKey" value="IntegrationDBConnString"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
