added TestPage to BusinessEntity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24415

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
@@ -178,6 +178,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BusinessEntity\Views\TestPage.html" />
+    <Content Include="BusinessEntity\Views\TestPageController.js" />
     <Content Include="packages.config" />
     <Content Include="web.config" />
   </ItemGroup>
