Balance for users
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24417

--- a/CLITester/CallGeneratorLibrary/app.config
+++ b/CLITester/CallGeneratorLibrary/app.config
@@ -24,7 +24,7 @@
   </appSettings>
     <connectionStrings>
         <add name="CallGeneratorLibrary.Properties.Settings.FraudTest2ConnectionString"
-            connectionString="Data Source=.;Initial Catalog=CLITester;User ID=sa;Password=P@ssw0rd!;"
+            connectionString="Data Source=.;Initial Catalog=CLITester2;User ID=sa;Password=vanrise@cce$$;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
