--- a/Vanrise/Code/Vanrise.Integration.Data/Vanrise.Integration.Data.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Data/Vanrise.Integration.Data.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IDataSourceAdapterTypeDataManager.cs" />
     <Compile Include="IDataSourceDataManager.cs" />
     <Compile Include="IntegrationDataManagerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
