--- a/Vanrise/Code/Vanrise.Integration.Web/Vanrise.Integration.Web.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Web/Vanrise.Integration.Web.csproj
@@ -100,10 +100,18 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Integration\Services\APIServices\DataSourceAPIService.js" />
+    <Content Include="Integration\Views\AdapterTemplates\FileReceiveAdapterTemplate.html" />
+    <Content Include="Integration\Views\AdapterTemplates\FileReceiveAdapterTemplateController.js" />
+    <Content Include="Integration\Views\DataSourceEditor.html" />
+    <Content Include="Integration\Views\DataSourceEditorController.js" />
     <Content Include="Integration\Views\DataSourceManagement.html" />
     <Content Include="Integration\Views\DataSourceManagementController.js" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
+      <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
+      <Name>Vanrise.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Integration.Business\Vanrise.Integration.Business.csproj">
       <Project>{1f22483a-d3db-48ee-aea8-8988bdb3b9a1}</Project>
       <Name>Vanrise.Integration.Business</Name>
