--- a/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
+++ b/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
@@ -169,6 +169,9 @@
     <Reference Include="Vanrise.Data.SQL">
       <HintPath>..\..\Vanrise\Code\Output\Vanrise.Data.SQL.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Integration.Adapters.FileReceiveAdapter">
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Integration.Adapters.FileReceiveAdapter.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Integration.Data">
       <HintPath>..\..\Vanrise\Code\Output\Vanrise.Integration.Data.dll</HintPath>
     </Reference>
